# webapi.event+/bin/Release/net7.0/swagger.json
@@ -184,6 +184,18 @@
         }
       }
     },
+    "/api/Evento/ListarAnteriores": {
+      "get": {
+        "tags": [
+          "Evento"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/Evento/{id}": {
       "get": {
         "tags": [
